change html template design

--- a/projects/template-api/files/m-full.html
+++ b/projects/template-api/files/m-full.html
@@ -58,7 +58,11 @@ a[x-apple-data-detectors] {
               <td style="padding:0;Margin:0;padding-right:20px;background-color:#f6f6f6" bgcolor="#f6f6f6" align="left">
                <table width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                  <tr>
-                     <td style="padding:0;Margin:0;padding-left:10px;font-size:0px" align="left"><a target="_blank" href="https://www.quirion.de" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#2DAAFA;font-size:14px"><img class="adapt-img" src="https://banking.quirion.de/images/emails/qui_logo_lokprinzip_rgb.png" alt="Logo quirion" style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" title="Logo quirion" width="150" height="48"></a></td>
+                     <td style="padding:0;Margin:0;padding-left:10px;font-size:0px" align="left">
+                         <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:27px;color:#2DAAFA;font-size:20px">
+                             <strong>YOUR LOGO</strong>
+                         </p>
+                     </td>
                  </tr>
                </table></td>
              </tr>
@@ -97,7 +101,7 @@ a[x-apple-data-detectors] {
               <td style="padding:0;Margin:0;padding-top:20px;padding-left:20px;padding-right:20px;background-color:#f6f6f6" bgcolor="#f6f6f6" align="left">
                <table width="100%" cellspacing="0" cellpadding="0" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                  <tr>
-                     <td align="center" style="padding:0;Margin:0"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:18px;color:#333333;font-size:12px">quirion AG<br>Kurfürstendamm 119<br>10711 Berlin<br>Germany<br></p></td>
+                     <td align="center" style="padding:0;Margin:0"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:18px;color:#333333;font-size:12px">your company<br>Sample Street 1<br>Sample City<br>Sample Country<br></p></td>
                  </tr>
                </table></td>
              </tr>
